# diffusion-limited-aggregation

./: .gitignore  README.md  mypy.ini  push_out_colliding.ipynb  pyproject.toml  requirements.txt  server_config.yml  setup.py
DLA/: __init__.py  __main__.py  config.py  config.yml  exceptions.py  renderer.py  simulation.py  splitter.py  types.py  utils.c  utils.html  utils.pyi  utils.pyx
DLA/particles/: __init__.py  particles_base.py  stuck_particles.py  utils.py  walking_particles.py
DLA/plane/: __init__.py  base_plane.py  chunk_view.py  chunks.py  collision_plane.py  dimension.py  fullnes.py  indivisible_plane.py  particle_plane.py  plane.py  plane_fullness.py  sub_planes.py
DLA/server/: __init__.py  client.py  config.py  config_template.yml  connection.py  connection_data.py  connection_tracker.py  connections.py  manager.py  server.py  server_config.yml  server_handler.py  work_generator.py  worker.py
DLA/walker/: __init__.py  config.py  stuck_walkers.py  utils.py  walker.py  walker_population.py
tests/: conftest.py  test_plane.py  test_utils.py
