[project]
name = "DLA"
version = "1.1.3"
author = "Kamil Gierada"
author_email = "vlaska8888@gmail.com"
description = "Program for generation of data for calculating fractal dimension of structures created DLA process."
long_description = """Program for observing fractal dimensions of structures created using process called
Diffusion Limited Aggregation (DLA), depending on memory parameter used in autoregressive process."""
long_description_content_type = "text/plain"
python_requires = ">=3.8"
keywords = "diffusion-limited-aggregation,dla,fractal-dimension"
url = "https://github.com/Vlaska/diffusion-limited-aggregation"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry]
name = "DLA"
version = "1.0.0"
authors = ["Kamil Gierada <vlaska8888@gmail.com>"]
build = "setup.py"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.20.2"
PyYAML = "^5.4.1"
beautifultable = "^1.0.1"
click = "^8.0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
autopep8 = "^1.5.6"
ipython = "^7.22.0"
jedi = "0.17.2"
pylama = "^7.7.1"
pytest = "^6.2.3"
loguru = "^0.5.3"
rope = "^0.19.0"
vulture = "^2.3"
pygame = "^2.0.1"
Cython = "^0.29.23"

[build-system]
requires = ["setuptools>=56.0.0", "numpy>=1.20.2"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggresive = 3
